# agent-orchestrator

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TODO.md  bterminal.py  btmsg  bttask  consult  ctx  install-v2.sh  install.sh  run-docker.sh  tasks  vite.config.ts
.claude/: CLAUDE.md
.claude/rules/: 02-error-handling.md  06-testing.md  15-memora.md  20-testing-gate.md  51-theme-integration.md  52-no-implicit-push.md  53-relative-units.md
.github/workflows/: e2e.yml  release.yml
bterminal-core/src/: lib.rs  pty.rs  sidecar.rs  supervisor.rs
bterminal-relay/: Cargo.toml
bterminal-relay/src/: main.rs
docker/tempo/: docker-compose.yaml  grafana-datasources.yaml
docs/: README.md  architecture.md  decisions.md  e2e-testing.md  findings.md  multi-machine.md  orchestration.md  phases.md  production.md  progress-archive.md  progress.md  release-notes.md  sidecar.md  task_plan.md  v3-findings.md  v3-progress.md  v3-release-notes.md  v3-task_plan.md
docs/progress/: v2-archive.md  v2.md  v3.md
docs/provider-adapter/: findings.md  progress.md  task_plan.md
scripts/: launch.sh
sidecar/: agent-runner-deno.ts  aider-parser.test.ts  aider-parser.ts  aider-runner.ts  claude-runner.ts  package.json
src/: app.css
src-tauri/: tauri.conf.json
src-tauri/src/: btmsg.rs  event_sink.rs  lib.rs  plugins.rs  pty.rs  search.rs  secrets.rs  sidecar.rs  watcher.rs
src-tauri/src/commands/: agent.rs  btmsg.rs  bttask.rs  files.rs  knowledge.rs  notifications.rs  persistence.rs  plugins.rs  (+5 more)
src/lib/: agent-dispatcher.ts
tests/e2e/: fixtures.ts  results-db.ts  tsconfig.json
v2/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
v2/bterminal-core/: Cargo.toml
v2/bterminal-core/src/: config.rs  event.rs  lib.rs  sandbox.rs  sidecar.rs
v2/bterminal-relay/: Cargo.toml
v2/scripts/: test-all.sh
v2/sidecar/: agent-runner-deno.ts  agent-runner.ts  aider-runner.ts  claude-runner.ts  codex-runner.ts  ollama-runner.ts  package-lock.json  package.json
v2/src/: App.svelte  app.css
v2/src-tauri/: Cargo.toml  tauri.conf.json
v2/src-tauri/sidecar/: aider-runner.mjs
v2/src-tauri/src/: btmsg.rs  bttask.rs  ctx.rs  fs_watcher.rs  groups.rs  lib.rs  main.rs  memora.rs  notifications.rs  plugins.rs  pty.rs  remote.rs  search.rs  secrets.rs  session.rs  sidecar.rs  telemetry.rs  watcher.rs
v2/src-tauri/src/commands/: agent.rs  btmsg.rs  bttask.rs  claude.rs  groups.rs  misc.rs  mod.rs  remote.rs  search.rs  watcher.rs
v2/src-tauri/src/session/: anchors.rs  mod.rs  sessions.rs  settings.rs
(+203 files in other folders)
