[package]
name = "bterminal-relay"
version = "0.1.0"
edition = "2021"
description = "Remote relay server for BTerminal multi-machine support"
license = "MIT"

[[bin]]
name = "bterminal-relay"
path = "src/main.rs"

[dependencies]
bterminal-core = { path = "../bterminal-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
